--- a/application/public/base.html
+++ b/application/public/base.html
@@ -3,162 +3,138 @@
 
 {% block navbar %}
 
-
 <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="">
-    <meta name="author" content="">
-    <link rel="icon" type="image/png" sizes="16x16" href="plugins/images/favicon.png">
-    <title>Ample Admin Template - The Ultimate Multipurpose admin template</title>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="description" content="">
+  <meta name="author" content="">
+  <link rel="icon" type="image/png" sizes="16x16" href="plugins/images/favicon.png">
+  <title>Custom Baits</title>
 
-    <!-- Latest compiled and minified CSS -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-
-    <!-- Menu CSS -->
-    <link href="static/plugins/bower_components/sidebar-nav/dist/sidebar-nav.min.css" rel="stylesheet">
-    <!-- toast CSS -->
-    <link href="static/plugins/bower_components/toast-master/css/jquery.toast.css" rel="stylesheet">
-    <!-- morris CSS -->
-    <link href="static/plugins/bower_components/morrisjs/morris.css" rel="stylesheet">
-    <!-- chartist CSS -->
-    <link href="static/plugins/bower_components/chartist-js/dist/chartist.min.css" rel="stylesheet">
-    <link href="static/plugins/bower_components/chartist-plugin-tooltip-master/dist/chartist-plugin-tooltip.css" rel="stylesheet">
-    <!-- animation CSS -->
-    <link href="static/css/animate.css" rel="stylesheet">
-    <!-- Custom CSS -->
-    <link href="static/css/style.css" rel="stylesheet">
-    <!-- color CSS -->
-    <link href="static/css/colors/default.css" id="theme" rel="stylesheet">
-    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
-    <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-    <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
-    <![endif]-->
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+  <link href="static/plugins/bower_components/sidebar-nav/dist/sidebar-nav.min.css" rel="stylesheet">
+  <link href="static/plugins/bower_components/toast-master/css/jquery.toast.css" rel="stylesheet">
+  <link href="static/plugins/bower_components/morrisjs/morris.css" rel="stylesheet">
+  <link href="static/plugins/bower_components/chartist-js/dist/chartist.min.css" rel="stylesheet">
+  <link href="static/plugins/bower_components/chartist-plugin-tooltip-master/dist/chartist-plugin-tooltip.css" rel="stylesheet">
+  <link href="static/css/animate.css" rel="stylesheet">
+  <link href="static/css/style.css" rel="stylesheet">
+  <link href="static/css/colors/default.css" id="theme" rel="stylesheet">
 </head>
 
 <body class="fix-header">
-<!-- ============================================================== -->
-<!-- Preloader -->
-<!-- ============================================================== -->
-<div class="preloader">
+
+  <!-- preloader -->
+  <div class="preloader">
     <svg class="circular" viewBox="25 25 50 50">
-        <circle class="path" cx="50" cy="50" r="20" fill="none" stroke-width="2" stroke-miterlimit="10" />
+      <circle class="path" cx="50" cy="50" r="20" fill="none" stroke-width="2" stroke-miterlimit="10" />
     </svg>
-</div>
-<!-- ============================================================== -->
-<!-- Wrapper -->
-<!-- ============================================================== -->
-<div id="wrapper">
-    <!-- ============================================================== -->
-    <!-- Topbar header - style you can find in pages.scss -->
-    <!-- ============================================================== -->
+  </div>
+
+  <div id="wrapper">
     <nav class="navbar navbar-default navbar-static-top m-b-0">
-        <div class="navbar-header">
-            <div class="top-left-part">
-                <!-- Logo -->
-                <a class="logo" href="index.html">
-                    <!-- Logo icon image, you can use font-icon also --><b>
-                    <!--This is dark logo icon--><img src="static/plugins/images/admin-logo.png" alt="home" class="dark-logo" /><!--This is light logo icon--><img src="static/plugins/images/admin-logo-dark.png" alt="home" class="light-logo" />
-                </b>
-                    <!-- Logo text image you can use text also --><span class="hidden-xs">
-                                <!--This is dark logo text--><img src="static/plugins/images/admin-text.png" alt="home" class="dark-logo" /><!--This is light logo text--><img src="static/plugins/images/admin-text-dark.png" alt="home" class="light-logo" />
-                             </span> </a>
-            </div>
-            <!-- /Logo -->
-            <ul class="nav navbar-top-links navbar-right pull-right">
-                <li>
-                    <form role="search" class="app-search hidden-sm hidden-xs m-r-10">
-                        <input type="text" placeholder="Search..." class="form-control"> <a href=""><i class="fa fa-search"></i></a> </form>
-                </li>
-                <li>
-                    <a class="profile-pic" href="#"> <img src="static/plugins/images/users/varun.jpg" alt="user-img" width="36" class="img-circle"><b class="hidden-xs">Steave</b></a>
-                </li>
-            </ul>
+      <div class="navbar-header">
+        <div class="top-left-part">
+
+          <!-- logo -->
+          <a class="logo" href="index.html">
+            <b>
+              <img src="static/plugins/images/admin-logo.png" alt="home" class="dark-logo" />
+              <img src="static/plugins/images/admin-logo-dark.png" alt="home" class="light-logo" />
+            </b>
+            <span class="hidden-xs">
+              <img src="static/plugins/images/admin-text.png" alt="home" class="dark-logo" />
+              <img src="static/plugins/images/admin-text-dark.png" alt="home" class="light-logo" />
+            </span> 
+          </a>
         </div>
-        <!-- /.navbar-header -->
-        <!-- /.navbar-top-links -->
-        <!-- /.navbar-static-side -->
+        
+        <!-- search + user -->
+        <ul class="nav navbar-top-links navbar-right pull-right">
+          <li>
+            <form role="search" class="app-search hidden-sm hidden-xs m-r-10">
+              <input type="text" placeholder="Search..." class="form-control"> 
+              <a href="">
+                <i class="fa fa-search"></i>
+              </a> 
+            </form>
+          </li>
+          <li>
+            <a class="profile-pic" href="#"> 
+              <img src="static/plugins/images/users/varun.jpg" alt="user-img" width="36" class="img-circle">
+              <b class="hidden-xs">Steave</b>
+            </a>
+          </li>
+        </ul>
+      </div>
     </nav>
-    <!-- End Top Navigation -->
-    <!-- ============================================================== -->
-    <!-- Left Sidebar - style you can find in sidebar.scss  -->
-    <!-- ============================================================== -->
+
+    <!-- left sidebar -->
     <div class="navbar-default sidebar" role="navigation">
-        <div class="sidebar-nav slimscrollsidebar">
-            <div class="sidebar-head">
-                <h3><span class="fa-fw open-close"><i class="ti-close ti-menu"></i></span> <span class="hide-menu">Navigation</span></h3>
-            </div>
-            <ul class="nav" id="side-menu">
-                <li style="padding: 70px 0 0;">
-                    <a href="{{ url_for('admin') }}" class="waves-effect"><i class="fa fa-clock-o fa-fw" aria-hidden="true"></i>Dashboard</a>
-                </li>
-                <li>
-                    <a href="{{ url_for('baits') }}" class="waves-effect"><i class="fa fa-user fa-fw" aria-hidden="true"></i>Baits</a>
-                </li>
-                <li>
-                    <a href="{{ url_for('colors') }}" class="waves-effect"><i class="fa fa-table fa-fw" aria-hidden="true"></i>Colors</a>
-                </li>
-                <li>
-                    <a href="{{ url_for('comments') }}" class="waves-effect"><i class="fa fa-table fa-fw" aria-hidden="true"></i>Comments</a>
-                </li>
-            </ul>
-            <div class="center p-20">
-                <a href="https://wrappixel.com/templates/ampleadmin/" target="_blank" class="btn btn-danger btn-block waves-effect waves-light">Upgrade to Pro</a>
-            </div>
-        </div>
+      <div class="sidebar-nav slimscrollsidebar">
+          <div class="sidebar-head">
+            <h3>
+              <span class="fa-fw open-close">
+                <i class="ti-close ti-menu"></i>
+              </span> 
+              <span class="hide-menu">Navigation</span>
+            </h3>
+          </div>
+          <ul class="nav" id="side-menu">
+            <li style="padding: 70px 0 0;">
+              <a href="{{ url_for('admin') }}" class="waves-effect">
+                <i class="fa fa-clock-o fa-fw" aria-hidden="true"></i>
+                Dashboard
+              </a>
+            </li>
+            <li>
+              <a href="{{ url_for('baits') }}" class="waves-effect">
+                <i class="fa fa-user fa-fw" aria-hidden="true"></i>
+                Baits
+              </a>
+            </li>
+            <li>
+              <a href="{{ url_for('colors') }}" class="waves-effect">
+                <i class="fa fa-table fa-fw" aria-hidden="true"></i>
+                Colors
+              </a>
+            </li>
+            <li>
+              <a href="{{ url_for('comments') }}" class="waves-effect">
+                <i class="fa fa-table fa-fw" aria-hidden="true"></i>
+                Comments
+              </a>
+            </li>
+          </ul>
+          <!-- <div class="center p-20">
+              <a href="https://wrappixel.com/templates/ampleadmin/" target="_blank" class="btn btn-danger btn-block waves-effect waves-light">Upgrade to Pro</a>
+          </div> -->
+      </div>
     </div>
 
-    <!-- ============================================================== -->
-    <!-- End Left Sidebar -->
-    <!-- ============================================================== -->
-    <!-- ============================================================== -->
-    <!-- Page Content -->
-    <!-- ============================================================== -->
+    <!-- page content wrapper -->
     <div id="page-wrapper">
         <div class="container-fluid">{% block content %}{% endblock %}</div>
-        <!-- /.container-fluid -->
-        <footer class="footer text-center"> 2017 &copy; Ample Admin brought to you by wrappixel.com </footer>
+        <!-- <footer class="footer text-center"> 2017 &copy; Ample Admin brought to you by wrappixel.com </footer> -->
     </div>
-</div>
-<!-- ============================================================== -->
-<!-- End Wrapper -->
-<!-- ============================================================== -->
-<!-- ============================================================== -->
-<!-- All Jquery -->
-<!-- ============================================================== -->
-<script src="static/plugins/bower_components/jquery/dist/jquery.min.js"></script>
+  </div>
 
-<!-- jQuery library -->
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-
-<!-- Latest compiled JavaScript -->
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-
-<!-- Menu Plugin JavaScript -->
-<script src="static/plugins/bower_components/sidebar-nav/dist/sidebar-nav.min.js"></script>
-<!--slimscroll JavaScript -->
-<script src="static/js/jquery.slimscroll.js"></script>
-<!--Wave Effects -->
-<script src="static/js/waves.js"></script>
-<!--Counter js -->
-<script src="static/plugins/bower_components/waypoints/lib/jquery.waypoints.js"></script>
-<script src="static/plugins/bower_components/counterup/jquery.counterup.min.js"></script>
-<!-- chartist chart -->
-<script src="static/plugins/bower_components/chartist-js/dist/chartist.min.js"></script>
-<script src="static/plugins/bower_components/chartist-plugin-tooltip-master/dist/chartist-plugin-tooltip.min.js"></script>
-<!-- Sparkline chart JavaScript -->
-<script src="static/plugins/bower_components/jquery-sparkline/jquery.sparkline.min.js"></script>
-<!-- Custom Theme JavaScript -->
-<script src="static/js/custom.js"></script>
-<script src="static/js/dashboard1.js"></script>
-<script src="static/plugins/bower_components/toast-master/js/jquery.toast.js"></script>
+  <script src="static/plugins/bower_components/jquery/dist/jquery.min.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+  <script src="static/plugins/bower_components/sidebar-nav/dist/sidebar-nav.min.js"></script>
+  <script src="static/js/jquery.slimscroll.js"></script>
+  <script src="static/js/waves.js"></script>
+  <script src="static/plugins/bower_components/waypoints/lib/jquery.waypoints.js"></script>
+  <script src="static/plugins/bower_components/counterup/jquery.counterup.min.js"></script>
+  <script src="static/plugins/bower_components/chartist-js/dist/chartist.min.js"></script>
+  <script src="static/plugins/bower_components/chartist-plugin-tooltip-master/dist/chartist-plugin-tooltip.min.js"></script>
+  <script src="static/plugins/bower_components/jquery-sparkline/jquery.sparkline.min.js"></script>
+  <script src="static/js/custom.js"></script>
+  <script src="static/js/dashboard1.js"></script>
+  <script src="static/plugins/bower_components/toast-master/js/jquery.toast.js"></script>
 </body>
 
-
 {% endblock %}
-
-
 </html>
